# pince

./: .gitignore  README.md  io.github.essicolo.Pince.json  meson.build
data/: io.github.essicolo.Pince.desktop  io.github.essicolo.Pince.gschema.xml  io.github.essicolo.Pince.metainfo.xml  pince.gresource.xml  style.css
data/ui/: add-dialog.blp  document-row.blp  preferences.blp  window.blp
po/: POTFILES  fr.po  meson.build  pince.pot
src/: add-dialog.vala  application.vala  citation-formatter.vala  crossref-client.vala  document-row.vala  document.vala  isbn-client.vala  library-bibtex.vala  library-csl-json.vala  library.vala  main.vala  metadata-extractor.vala  openalex-client.vala  preferences.vala  recent-libraries.vala  tag-row.vala  utils.vala  window.vala
tests/: test-fetch-live.vala  test-library.vala  test-pdf-title.vala
tests/fixtures/: sample.bib  sample.json
